@startuml

class ValidationStamp <<entity>> {
    dataType: String?
}
class ValidationRun <<entity>> {
    dataType: String?
    data: JSON?
}

interface ValidationDataType
interface ValidationDataService

ValidationRun --* ValidationStamp: validationStamp "1"

ValidationDataService ..> ValidationDataType: manages "*"

ValidationStamp ..> ValidationDataType: dataType "0..1"
note on link
    Through ""dataType"" identifier
    stored at validation stamp level
end note

@enduml
